Minor change in footer

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </div>
 
         <footer class="text-center text-xs opacity-60">
-            © 2025 My Linktree | Made with ❤️
+            © 2025 LucentLink | Made with ❤️
         </footer>
     </div>
 
@@ -232,9 +232,9 @@
                 document.documentElement.style.setProperty('--text-color', 'rgba(255, 255, 255, 0.85)');
                 document.documentElement.style.setProperty('--icon-color', 'rgba(255, 255, 255, 0.7)');
             }
-
             updateColors();
         });
+
     </script>
 </body>
 </html>
